<resources>
    <string name="app_name">CMI World</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">407547506272648</string>
    <string name="title_activity_faq">FAQActivity</string>
    <string name="prompt_email">USER NAME</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in_short">Login</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="register">REGISTER</string>
    <string name="mailboxotp">Enter OTP sent to your Mailbox</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend otp</string>
    <string name="done">Done</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="email_id">EMAIL ID</string>
    <string name="full_name">FULL NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="already_register">Already Register.</string>
    <string name="next">NEXT</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="pound">£\u0020</string>
    <string name="_1">1 )</string>
    <string name="write_your_answer">Write your Answer..</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="backers">BACKERS :</string>
    <string name="story">STORY</string>
    <string name="type_a_message">Type a message</string>
    <string name="see_updates">See Updates</string>
    <string name="note">NOTE :</string>
    <string name="amount">AMOUNT</string>
    <string name="continue_to_payment">CONTINUE TO PAYMENT</string>
    <string name="enter_otp_sent_to_your_mailbox">Enter OTP sent to your Mailbox</string>
    <string name="otp">OTP</string>
    <string name="title">Title</string>
    <string name="_70_funded">70% Funded</string>
    <string name="updates">UPDATES</string>
    <string name="search">Search</string>
    <string name="project_detail">Project Detail</string>
    <string name="add_photos">Add Photos</string>
    <string name="save">Save</string>
    <string name="project_name">PROJECT NAME</string>
    <string name="description">DESCRIPTION</string>
    <string name="tags">TAGS</string>
    <string name="separate_your_tags_with">Separate Your Tags With ,</string>
    <string name="feature_image">FEATURE IMAGE</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="images">IMAGES</string>
    <string name="select_images">SELECT IMAGES</string>
    <string name="videos">VIDEOS</string>
    <string name="select_videos">SELECT VIDEOS</string>
    <string name="category">CATEGORY</string>
    <string name="estimated_donation">Estimated Donation</string>
    <string name="write_comments">Write Comments ..</string>

    <string name="what_is_the_purpose_of_this_application">what is the purpose of this application ?</string>
    <string name="enterprise_detail">ENTERPRISE DETAIL :</string>
    <string name="location">Location</string>
    <string name="working_area">WORKING AREA</string>
    <string name="starting_from">STARTING FROM</string>
    <string name="register_id_no">REGISTER ID NO</string>
    <string name="enterprise_name">ENTERPRISE NAME</string>
    <string name="country">Country</string>
    <string name="messages">Messages</string>
    <string name="testimonials">Testimonials</string>
    <string name="settings">Settings</string>
    <string name="your_progress">Your Progress</string>
    <string name="edit_profife">Edit Profile</string>
    <string name="payment_details">Payment Details</string>
    <string name="faq">FAQ</string>
    <string name="make_donation_public">Make Donation Public</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">LOGOUT</string>
    <string name="user_experience">User Experience</string>
    <string name="user_development">User Development</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="old_password">Old Password</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_name">Enter valid Name</string>
    <string name="write_a_message">Write a message...</string>
    <string name="display_name">Display Name</string>
    <string name="private_password">Private password</string>
    <string name="no_users_found">No users found!</string>
    <string name="login_for_private_chat">Login for Private Chat</string>
    <string name="register_private_chat">Register Private Chat</string>
    <string name="private_chat">Private Chat</string>

</resources>
