<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_text"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_5">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/finalstep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardCornerRadius="@dimen/_5"
                card_view:contentPadding="@dimen/_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/project_detail"
                        android:textColor="@color/black"
                        android:textSize="@dimen/activity_horizontal_margin"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_project_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/project_name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:singleLine="true"
                            android:textStyle="bold" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:inputType="text"
                            android:maxLines="1"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:singleLine="true"
                            android:textStyle="bold" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_tag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/separate_your_tags_with"
                            android:inputType="text"
                            android:maxLines="5"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:singleLine="true"
                            android:textStyle="bold" />

                    </android.support.design.widget.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/feature_image"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:id="@+id/linear_feature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@color/primary_text"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/edt_select_feature_image"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/select_image"
                                android:textAlignment="center"
                                android:textColor="@color/black" />

                            <ImageView
                                android:id="@+id/imageview"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginRight="15dp"
                                android:layout_marginTop="12dp"
                                android:src="@drawable/camera" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_images"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/images"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@color/primary_text"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/edt_select_image"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/select_images"
                                android:textAlignment="center"
                                android:textColor="@color/black" />

                            <ImageView

                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginRight="15dp"
                                android:layout_marginTop="12dp"
                                android:src="@drawable/camera" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/videos"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@color/primary_text"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/edt_select_video"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:background="@null"
                                android:gravity="center"
                                android:text="@string/select_videos"
                                android:textAlignment="center"
                                android:textColor="@color/black" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginRight="15dp"
                                android:layout_marginTop="12dp"
                                android:src="@drawable/video_icon_chat" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/category"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/layout_rounded_main_white">

                            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                                android:id="@+id/spinner_category"
                                style="@style/SpinnerAsEditText"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:padding="2dp" />
                            <!--
                            -->
                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                android:src="@drawable/next" />


                        </LinearLayout>
                    </LinearLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_estimated_donation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/estimated_donation"
                            android:inputType="number"
                            android:maxLines="1"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:singleLine="true"
                            android:textStyle="bold" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_done"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_50"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorAccent"
                        android:text="@string/done"
                        android:textColor="#ffffff" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


    <com.github.lzyzsd.circleprogress.CircleProgress
        android:id="@+id/circle_progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:visibility="gone"
        app:circle_finished_color="@color/tabSelectedIconColor"
        app:circle_text_color="#000000"
        app:circle_unfinished_color="#ffffff" />

</LinearLayout>
